--- a/smash.css
+++ b/smash.css
@@ -295,6 +295,197 @@ button:hover {
     font-size: 13px;
 }
 
+.big-div {
+    background-color: #F6F3F2;
+}
+
+.testing {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.vue {
+    /* background-color: hotpink; */
+    width: 27%;
+    margin-right: 30px;
+    margin-top: 40px;
+    padding: 15px;
+}
+
+.vue:hover {
+    background-color: white;
+    border-radius: 13px;
+}
+
+.days {
+    font-size: 14px;
+    font-weight: 100;
+    color: #5c5b5b;
+}
+
+.app {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 12px;
+    text-decoration: underline;
+}
+
+.app:hover {
+    color: #93281F;
+    cursor: pointer;
+}
+
+.omer {
+    margin-top: 20px;
+    text-decoration: underline;
+    font-size: 16px;
+    font-weight: 900;
+    margin-bottom: 22px;
+    color: #333333;
+}
+
+.omer:hover {
+    cursor: pointer;
+    color: black;
+}
+
+.long {
+    font-size: 40px;
+    font-weight: 100;
+    color: #93281F;
+    padding: 20px 25px;
+    width: fit-content;
+}
+
+.long1 {
+    margin-top: 30px;
+}
+
+.long2 {
+    margin-top: 30px;
+}
+
+.long3 {
+    margin-top: 30px;
+}
+
+.long:hover {
+    background-color:#006FC6;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.pishak {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    margin: 0 auto;
+    margin-top: 200px;
+}
+
+.hopen {
+    margin-top: 90px;
+    width: 29%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our {
+    font-size: 12px;
+    font-weight: 100;
+    margin-bottom: 14px;
+    color: #5c5b5b;
+}
+
+.imgh {
+    margin: 12px;
+}
+
+.imgh img {
+    width: 150px;
+    height: 70px;
+}
+
+.hopin1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.hopin1:hover {
+    cursor: pointer;
+}
+
+.ph {
+    margin: 0 10px 10px 10px;
+    text-align: center;
+}
+
+.bh {
+    height: 33px;
+    background-color: #175FFF;
+    border-radius: 3px;
+    border: none;
+}
+
+
+
+.join {
+    position: relative;
+    width: 69%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #EBEDE9;
+    border-radius: 12px;
+}
+
+.member {
+    font-size: 28px;
+    font-weight: bold;
+    margin-top: 120px;
+}
+
+.friend {
+    font-size: 18px;
+    text-align: center;
+    margin: 15px 30px;
+}
+
+.bjoin {
+    width: 300px;
+    height: 70px;
+    background-color: #19A972 ;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    border: none;
+    border-radius: 12px;
+    margin: 12px 0;
+}
+
+.join img {
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    top: -130px;
+}
+
+.alre {
+    font-weight: 100;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+
+
+
+
+
 
 @media only screen and (max-width:1220px) {
     .cat5 {
@@ -306,9 +497,17 @@ button:hover {
     }
 }
 
-@media only screen and (max-width:1120px) {
+@media only screen and (max-width:1110px) {
     .cat4 {
         display: none;
+    }
+
+    .testing {
+        flex-wrap: wrap;
+    }
+
+    .vue {
+        width: 40%;
     }
 }
 
@@ -337,6 +536,14 @@ button:hover {
     .don-img,
     .valer-img {
         flex-direction: column;
+    }
+
+    .testing {
+        flex-direction: column;
+    }
+
+    .vue {
+        width: 100%;
     }
 }
 
