--- a/smash.css
+++ b/smash.css
@@ -685,6 +685,56 @@ button:hover {
     padding: 15px;
 }
 
+.design {
+    position: relative;
+    margin-top: 100px;
+    background-color: #D33A2C;
+    padding: 50px;
+}
+
+.book {
+    position: absolute;
+    top: -60px;
+    right: 60px;
+}
+
+.book img {
+    width: 270px;
+    height: 380px;
+}
+
+.system1 {
+    font-weight: 600;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.system2 a {
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    text-decoration: underline #f7766a;
+}
+
+.system3 {
+    font-size: 18px;
+    color: white;
+    width:60%;
+    margin-top: 30px;
+}
+
+.system4 {
+    width: 300px;
+    height: 60px;
+    background-color: white;
+    font-size: 22px;
+    font-weight: 500;
+    color: #175FFF;
+    border: none;
+    border-radius: 10px;
+    margin-top: 25px;
+
+}
 
 @media only screen and (max-width:1220px) {
     .cat5 {
@@ -748,6 +798,28 @@ button:hover {
     .joker {
         margin-top: 80px;
     }
+
+    .design {
+        position: relative;
+        padding-top: 270px;
+    }
+
+    .book {
+        position: absolute;
+        top: 10px;
+        left: 50px;
+    }
+
+
+    .book img {
+        width: 150px;
+        height: 240px;
+    }
+
+    .system3 {
+        width: 100%;
+    }
+
 }
 
 @media only screen and (max-width:740px) {
