--- a/smash.css
+++ b/smash.css
@@ -736,6 +736,87 @@ button:hover {
 
 }
 
+.person {
+    display: flex;
+    width: 82%;
+    margin: 60px auto 0 auto;
+}
+
+.person-img img {
+    width: 210px;
+    height: 210px;
+    border-radius: 10px;
+    border: 4px solid red;
+}
+
+.person-text h2 {
+    margin-left: 15px;
+    font-weight: 100;
+    color: rgb(53, 51, 51);
+}
+
+.person-text p {
+    font-size: 17px;
+    line-height: 1.8;
+    margin-left: 15px;
+}
+
+.umar {
+    display: flex;
+    flex-wrap: wrap;
+    width: 86%;
+    margin: 60px auto 0 auto;
+}
+
+.umar1 {
+    display: flex;
+    width: 50%;
+    margin-top: 80px;
+}
+
+.umar-img {
+    padding-top: 15px;
+}
+
+.umar-img img {
+    width: 70px;
+    height: 70px;
+    border: 4px solid red;
+    border-radius: 7px;
+}
+
+.umar-text {
+    margin-left: 15px;
+}
+
+.text1 a {
+    font-size: 18px;
+    font-weight: 900;
+    color: #333333;
+}
+
+.text2 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.text2:hover {
+    color: #93281F;
+    cursor: pointer;
+}
+
+.text3 {
+    font-size: 17px;
+    width: 70%;
+    line-height: 1.8;
+    color: #333333;
+}
+
+
+
+
+
 @media only screen and (max-width:1220px) {
     .cat5 {
         display: none;
@@ -781,6 +862,17 @@ button:hover {
     .bexplore2,
     .bexplore3 {
         font-size: 17px;
+    }
+}
+
+@media only screen and (max-width:1020px) {
+    .umar {
+        flex-direction: column;
+        /* width: 100%; */
+    }
+
+    .umar1 {
+        width: 100%;
     }
 }
 
