--- a/smash.css
+++ b/smash.css
@@ -21,8 +21,9 @@ header {
 }
 
 .smash {
-    height: 40px;
-    width: 40px;
+    height: 80px;
+    width: 80px;
+    margin-top: 30px;
 }
 
 .head1 {
@@ -306,7 +307,6 @@ button:hover {
 }
 
 .vue {
-    /* background-color: hotpink; */
     width: 27%;
     margin-right: 30px;
     margin-top: 40px;
