--- a/smash.css
+++ b/smash.css
@@ -23,7 +23,7 @@ header {
 .smash {
     height: 80px;
     width: 80px;
-    margin-top: 30px;
+    padding-top: 20px;
 }
 
 .head1 {
@@ -93,12 +93,20 @@ header {
     flex: 70%;
 }
 
+.dondon {
+    display: flex;
+}
+
 .don .don1 {
-    margin-left: 200px;
+    margin-bottom: 20px;
 }
 
 .don1 {
     font-weight: 100;
+}
+
+.right1 {
+    margin-left: 20px;
 }
 
 .don1 a {
@@ -120,11 +128,6 @@ header {
     height: 150px;
 }
 
-.don-right {
-    margin-left: 20px;
-
-}
-
 .don-right a {
     font-size: 47px;
     font-weight: 600;
@@ -134,8 +137,8 @@ header {
 
 .don-bot {
     color: rgb(46, 45, 45);
-    margin: 15px 0 0 200px;
     font-size: 14px;
+    margin-top: 15px;
 }
 
 .don-bot a {
@@ -157,50 +160,54 @@ header {
     margin: 30px 0 0 15px;
 }
 
-.valer1 {
-    margin: 60px 0 0 160px;
-}
-
-.valer1 a {
-    font-size: 18px;
-    font-weight: 700;
-    color: red;
-}
 
 .don-bot2 {
     font-size: 14px;
 }
 
-.don-bot2 a {
-    font-size: 18px;
-    font-weight: 900;
-    color: rgb(53, 51, 51);
+.valer {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
 }
 
-.valer-img {
-    display: flex;
-    margin-left: 30px;
-    width: 80%;
-    margin-top: 20px;
+.valer-right {
+    padding-right: 100px;
+    margin-left: 20px;
 }
+
+.vl1 {
+    margin-bottom: 20px;
+}
+
+.vl1 .a1 {
+    font-size: 18px;
+    font-weight: 600;
+    color: red;
+    text-decoration: none;
+}
+
+.vl1 .a2 {
+    font-size: 20px;
+    font-weight: 900;
+    color: #333333;
+    text-decoration: none;
+}
+
+.valer-right .a3 {
+    font-size: 35px;
+    font-weight: 600;
+    color: #333333;
+    text-decoration: none;
+}
+
+
 
 .valer-img img {
     border: 6px solid red;
     border-radius: 10px;
-    width: 110px;
-    height: 110px;
-}
-
-.valer-right {
-    margin-left: 20px;
-
-}
-
-.valer-right a {
-    font-size: 30px;
-    font-weight: 600;
-    color: rgb(43, 42, 42);
-    text-decoration: none;
+    width: 100px;
+    height: 100px;
 }
 
 .see {
@@ -835,15 +842,35 @@ button:hover {
     line-height: 2.4;
 }
 
-.foot2 a {
-    font-size: 20px;
-    color: whitesmoke;
-    text-decoration: none;
-    margin: 10px 14px;
+ul, 
+li {
+    margin: 0;
+    padding: 0;
 }
 
-.foot2 a:hover {
-    color: #410904;
+.div-ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.div-li {
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+    line-height: 2;
+    font-family: initial;
+}
+
+.div-li a:hover {
+    color: #4d0a04;
+}
+
+.div-li a {
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 24px;
+    margin-left: 5px;
 }
 
 .foot3 {
@@ -879,33 +906,38 @@ button:hover {
 .foot-img1 img {
     position: absolute;
     left: 60px;
-    bottom: 80px;
-    width: 300px;
-    height:300px;
+    bottom: 50px;
+    width: 250px;
+    height:250px;
 }
 
 .foot-img2 img {
     position: absolute;
-    right: 40px;
-    bottom: 80px;
-    width: 250px;
-    height: 250px;
+    right: 80px;
+    bottom: 70px;
+    width: 200px;
+    height: 200px;
 }
 
-.icon {
+.icon i {
     position: absolute;
-    bottom: 13px;
-    right: 13px;
+    bottom: 15px;
+    right: 15px;
+    font-size: 40px;
+    color: wheat;
     padding: 15px;
     background-color: grey;
     border-radius: 10px;
-    font-size: 20px;
-    color: wheat;
 }
 
 .icon:hover {
     cursor: pointer;
     background-color:#282634 ;
+}
+
+.foot2 i {
+    font-size: 10px;
+    color: #93281F;
 }
 
 @media only screen and (max-width:1220px) {
@@ -915,7 +947,13 @@ button:hover {
     
     .negr {
         flex-direction: column;
+        margin-top: 60px;
     }
+
+    .don {
+        margin-bottom: 60px;
+    }
+
 }
 
 @media only screen and (max-width:1110px) {
@@ -1035,10 +1073,6 @@ button:hover {
         display: none;
     }
 
-    .don-img,
-    .valer-img {
-        flex-direction: column;
-    }
 
     .testing {
         flex-direction: column;
@@ -1070,6 +1104,24 @@ button:hover {
         display: none;
     }
 
+    .valer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .valer-right {
+        padding-right: 0;
+        margin-left: 0;
+    }
+
+    .valer-img {
+        
+    }
+
+    .dondon {
+        flex-direction: column;
+    }
+
 }
 
 @media only screen and (max-width:510px)  {
@@ -1094,10 +1146,28 @@ button:hover {
     .form1 input,
     .search {
         width: 99%;
+        margin-top: 0;
+        padding-top: 0;
+
+    }
+
+    .smash {
+        width: 60px;
+        height: 60px;
+    }
+
+    .fa-search {
+        position: absolute;
+        top: 20px;
     }
 
     header {
-        height: 180px;
+        height: 160px;
     }
+
+    .don-img {
+        margin-top: 0;
+    }
+
 }
 
